# Bootstrap_sampling

./: .gitignore  Cargo.toml  README.md  table100m.db
src/: bootstrap_sampling.rs  create_table.txt  data_import.sql  data_sampling.rs  main.rs  parser.rs  query.txt
src/data_100k/: customer.tbl  order.tbl  part.tbl  partsupp.tbl  supplier.tbl
src/data_100m/: customer.tbl  nation.tbl  part.tbl  region.tbl  supplier.tbl
