[package]
name = "rust_tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
sqlparser = "0.32.0"
#sqlx = { version = "0.6.2", features = [  "runtime-tokio-native-tls", "sqlite" ] }
#tokio = { version = "1.26.0", features = ["macros"]}
chrono = {version = "0.4.23", features = ["serde"]}
rusqlite = "0.28.0"
statrs = "0.16.0"